sfSandBoxCode/force-app/main/default/objects/Taroworks_Test_Object__c/Taroworks_Test_Object__c.object-meta.xml
<CustomObject>
    <description>Object Created to test taroworks functionality</description>
    <label>Taroworks Test Object</label>
    <nameField>
        <label>Taroworks Test Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taroworks Test Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>