sfSandBoxCode/force-app/main/default/objects/Taroworks_Test_Object__c/fields/GPS_Co_ordinate__c.field-meta.xml
<CustomField>
    <fullName>GPS_Co_ordinate__c</fullName>
    <label>GPS Co-ordinates</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>