sfSandBoxCode/force-app/main/default/objects/Taroworks_Test_Object__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>