sfSandBoxCode/force-app/main/default/objects/Taroworks_Test_Object__c/recordTypes/Taroworks_Test_Record.recordType-meta.xml
<RecordType>
    <fullName>Taroworks_Test_Record</fullName>
    <active>true</active>
    <label>Taroworks Test Record</label>
</RecordType>